--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,10 +6,39 @@
 @import url(/node_modules/react-resizable/css/styles.css);
 
 .react-grid-layout {
+  background-color: rgba(185, 186, 163, 0.25);
   position: relative;
   transition: height 0ms ease;
 }
 .react-grid-item {
   transition: all 0ms ease;
   transition-property: left, top;
+}
+
+.bg-bln-azul-arena {
+  background-color: rgba(128, 184, 190, 0.25);
+}
+.bg-bln-verde-arena {
+  background-color: rgba(185, 186, 163, 0.25);
+}
+.bg-bln-flor-lila {
+  background-color: rgba(240, 0, 208, 0.075);
+}
+.bg-bln-flor-amarilla {
+  background-color: rgba(245, 239, 137, 0.25);
+}
+.bln-rojo {
+  color: #E41E3C;
+}
+.bln-verde {
+  color: #A8E200;
+}
+.bln-lila {
+  color: #F000D0;
+}
+.bln-naranja {
+  color: #F58220;
+}
+.bln-amarillo {
+  color: #FFF440;
 }
